--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -18,7 +18,16 @@
     font-size: 30px;
     font-weight: 600;
     text-decoration: none;
+    align-self: flex-end;
     color: var(--color-text)
+}
+
+.title img {
+    display: flex;
+    align-self: flex-start;
+    width: 55px;
+    height: 55px;
+    z-index: 1000;
 }
 
 .menu {
